# muvistat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  make.bat  pyproject.toml  requirements.txt
app/: __init__.py  database.py  db_utils.py  main.py  models.py
app/routers/: __init__.py  snapshots.py  videos.py
